# substrate-pow-node-template

./: .gitignore  build.sh
basic-pow/: Cargo.toml
basic-pow/src/: chain_spec.rs
node/: Cargo.toml
node/src/: command.rs  service.rs
